jlamontSC-test/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Action_Center_Template_Type__c</fullName>
        <label>Action Center Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Chapter</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Center_Template__c</fullName>
        <label>Action Center Template</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Action_Center_Template_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Angeles</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Atlantic</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>ClimateParents</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Cumberland</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>John Muir</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>KXL Victory</fullName>
                </value>
                <value>
                    <fullName>Loma Prieta</fullName>
                </value>
                <value>
                    <fullName>Lone Star</fullName>
                </value>
                <value>
                    <fullName>Los Padres</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>North Carolina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AddUP_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>AddUP External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AddUp_Base_URL__c</fullName>
        <label>AddUp Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AddUp_Link__c</fullName>
        <label>AddUp Link</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_Action_to_Attendees__c</fullName>
        <label>Add Action to Attendees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin/Operations</fullName>
                </value>
                <value>
                    <fullName>Bird Dogging</fullName>
                </value>
                <value>
                    <fullName>Call to Target</fullName>
                </value>
                <value>
                    <fullName>Canvassing</fullName>
                </value>
                <value>
                    <fullName>Content Contribution</fullName>
                </value>
                <value>
                    <fullName>Direct-to-Target Message</fullName>
                </value>
                <value>
                    <fullName>Event Attendance</fullName>
                </value>
                <value>
                    <fullName>Event Leadership</fullName>
                </value>
                <value>
                    <fullName>Event Support</fullName>
                </value>
                <value>
                    <fullName>Field Monitoring</fullName>
                </value>
                <value>
                    <fullName>Fundraising Support</fullName>
                </value>
                <value>
                    <fullName>Lobbying</fullName>
                </value>
                <value>
                    <fullName>LTE/OpEd</fullName>
                </value>
                <value>
                    <fullName>One-on-One Meeting</fullName>
                </value>
                <value>
                    <fullName>Petition</fullName>
                </value>
                <value>
                    <fullName>Petition Collection</fullName>
                </value>
                <value>
                    <fullName>Phonebanking</fullName>
                </value>
                <value>
                    <fullName>Public Comment</fullName>
                </value>
                <value>
                    <fullName>Social Media Recruitment</fullName>
                </value>
                <value>
                    <fullName>Speaking/Testifying</fullName>
                </value>
                <value>
                    <fullName>Survey/Poll Response</fullName>
                </value>
                <value>
                    <fullName>Tabling</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Tweet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_to_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Automatically add action takers and event registrants to this list</inlineHelpText>
        <label>Add to List</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Lists</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Add to List)</relationshipLabel>
        <relationshipName>Campaigns6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Directions__c</fullName>
        <label>Additional Directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Info_URL__c</fullName>
        <label>Additional Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Additional_State_s__c</fullName>
        <label>Additional State(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advocacy_Action_Count_Dirty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is marked when an Advocacy Action is changed where it is or was marked as the Related Action Campaign.  The batchCampaignAATotals nightly batch process should recalculate the totals for this campaign and uncheck this field.</description>
        <label>Advocacy Action Count Dirty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advocacy_Action_Count_Offset__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This amount is ADDED to the existing Advocacy Action Count.</description>
        <label>Advocacy Action Count Offset</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advocacy_Action_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The Count of the number of Advocacy Actions against this campaign. Maintained by Trigger.</description>
        <label>Advocacy Action Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advocacy_Action_Goal__c</fullName>
        <label>Advocacy Action Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advocacy_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advocacy Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Advocacy Form</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Advocacy Form)</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advocacy_Link__c</fullName>
        <label>Advocacy Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_ID__c</fullName>
        <description>Convio Alert ID, Club table ConvioAlertDef</description>
        <externalId>true</externalId>
        <label>Alert ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ask_for_Additional_Attendees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask for Additional Attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_for_Mobile_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask for Mobile Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_for_Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask for Phone Number?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_for_Street_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask for Street Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_for_ZIP_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask for ZIP Code?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attended_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attended Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Gen_Action_Request_ID__c</fullName>
        <description>This field is used to automatically generate a unique ID for each action request. It was created because auto-number fields can&apos;t be packaged.</description>
        <displayFormat>AR{0000000}</displayFormat>
        <label>Auto Gen Action Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Autoresponder_External_Key__c</fullName>
        <inlineHelpText>External Key of the triggered send in ExactTarget</inlineHelpText>
        <label>Autoresponder External Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autoresponder_Subject_Line__c</fullName>
        <inlineHelpText>Default subject line will be &quot;Thank you for registering for [Event Name]&quot;</inlineHelpText>
        <label>Autoresponder Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autoresponder_Text__c</fullName>
        <inlineHelpText>You can use HTML to format text in this field. Otherwise, it will display as a single paragraph of plain text.</inlineHelpText>
        <label>Additional Autoresponder Text</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Autoresponder_Type__c</fullName>
        <label>Event Branding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sierra Club</fullName>
                </value>
                <value>
                    <fullName>SierraRise</fullName>
                </value>
                <value>
                    <fullName>ClimateParents</fullName>
                </value>
                <value>
                    <fullName>SSC</fullName>
                </value>
                <value>
                    <fullName>SeizeTheGrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backend_Ask_String__c</fullName>
        <formula>Backend_Donation_Form__r.Default_Ask_String__c</formula>
        <label>Backend_Ask_String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backend_Donation_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backend Donation Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Donation Form</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Usable_for_Backend_Asks__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Backend Donation Form)</relationshipLabel>
        <relationshipName>Campaigns4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bring__c</fullName>
        <label>Bring</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CampName__c</fullName>
        <description>Decode of the Camp CampName field</description>
        <inlineHelpText>The Camp name ( not Campaign ).</inlineHelpText>
        <label>Camp Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Strategy_Global__c</fullName>
        <label>National Campaign Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>National_Campaign_Global__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Campaign_Strategy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Option__c</fullName>
        <label>Cancellation Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any rain cancels</fullName>
                </value>
                <value>
                    <fullName>Heavy rain cancels</fullName>
                </value>
                <value>
                    <fullName>Activity is held rain or shine, but may be altered due to inclement weather</fullName>
                </value>
                <value>
                    <fullName>Steady rain cancels</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Policy_Description__c</fullName>
        <label>Cancellation Policy Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancelled_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancelled Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate_Committee__c</fullName>
        <inlineHelpText>For &quot;SCPC - Coordinated&quot; disclaimer</inlineHelpText>
        <label>Candidate Committee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carpool__c</fullName>
        <label>Carpool</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <description>Case Safe Campaign ID</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>Case Safe Campaign ID</inlineHelpText>
        <label>Campaign Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>EM for email or 4-letter code beginning with WO for web or mobile</inlineHelpText>
        <label>Channel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>Channel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (Channel)</relationshipLabel>
        <relationshipName>Campaigns_Channel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Club_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use to select your local or volunteer entity</inlineHelpText>
        <label>Club Entity</label>
        <referenceTo>Club_Entity__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Club_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Club Event</label>
        <referenceTo>Club_Event__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_From_Convio__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Advocacy alert converted during Convio migration</description>
        <label>Converted From Convio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Description__c</fullName>
        <label>Cost Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <inlineHelpText>A: Actual
E: Estimated</inlineHelpText>
        <label>Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_1_Label__c</fullName>
        <label>Custom Field 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_2_Label__c</fullName>
        <label>Custom Field 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_3_Label__c</fullName>
        <label>Custom Field 3 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Tentative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date Tentative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Ask_String__c</fullName>
        <label>Default Ask String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Field_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Field 1?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Field_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Field 2?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Field_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Field 3?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Method__c</fullName>
        <inlineHelpText>Selecting &quot;External URL&quot; will result in no Event Detail page being created. Your event will appear in event listings, but will link directly to the URL you provide.</inlineHelpText>
        <label>Display Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Events Page</fullName>
                    <default>true</default>
                    <label>Salesforce Events Page</label>
                </value>
                <value>
                    <fullName>External URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_in_Spanish__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Display labels and buttons in Spanish. Your text must be entered in Spanish.</inlineHelpText>
        <label>Display in Spanish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Display_Message_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Display Message Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_show_on_website_calendars__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to prevent the event from being seen on ALL calendars. For Invite Only events.</inlineHelpText>
        <label>Do not show on website calendars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Donation_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donation Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Donation Form</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Donation Form)</relationshipLabel>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donation_Language__c</fullName>
        <description>For backend donation ask from advocacy form</description>
        <inlineHelpText>This is language that appears above the donation amounts and donation button, on a take action back end ask.</inlineHelpText>
        <label>Donation Language</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Donation_Link__c</fullName>
        <label>Donation Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effort_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Custom Code 1 in Neobiz</description>
        <inlineHelpText>For SierraRise and Climate Parents campaigns only - use SR or CP.</inlineHelpText>
        <label>Effort Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>Effort Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (Effort Type)</relationshipLabel>
        <relationshipName>Campaigns_Promotional_Campaign_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Audience_Geography__c</fullName>
        <inlineHelpText>The specific geography this email was sent to, if applicable</inlineHelpText>
        <label>Email Audience Geography</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Multi-State</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Chapter</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Legislative Districts</fullName>
                </value>
                <value>
                    <fullName>Counties</fullName>
                </value>
                <value>
                    <fullName>Cities</fullName>
                </value>
                <value>
                    <fullName>Zips</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Audience_Type__c</fullName>
        <inlineHelpText>The audience type this email was sent to, for email benchmark reporting</inlineHelpText>
        <label>Email Audience Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actiontakers: 6-month</fullName>
                </value>
                <value>
                    <fullName>Actiontakers: All Time</fullName>
                </value>
                <value>
                    <fullName>Actiontakers: Arc</fullName>
                </value>
                <value>
                    <fullName>AddUp: Social Actiontakers</fullName>
                </value>
                <value>
                    <fullName>AddUp: Users</fullName>
                </value>
                <value>
                    <fullName>Attentive.ly: Facebook and Twitter Users</fullName>
                </value>
                <value>
                    <fullName>Attentive.ly: Facebook Users</fullName>
                </value>
                <value>
                    <fullName>Attentive.ly: Twitter Users</fullName>
                </value>
                <value>
                    <fullName>Chapter Fundraising Contacts</fullName>
                </value>
                <value>
                    <fullName>Chapter Opt-In</fullName>
                </value>
                <value>
                    <fullName>Full list</fullName>
                </value>
                <value>
                    <fullName>Issue activist</fullName>
                </value>
                <value>
                    <fullName>Members (Sierra Club)</fullName>
                </value>
                <value>
                    <fullName>Non-members</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Previous email clicks</fullName>
                </value>
                <value>
                    <fullName>Previous email non-actiontakers</fullName>
                </value>
                <value>
                    <fullName>Previous email non-clicks</fullName>
                </value>
                <value>
                    <fullName>Previous email non-opens</fullName>
                </value>
                <value>
                    <fullName>Previous email opens</fullName>
                </value>
                <value>
                    <fullName>Reactivation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Name__c</fullName>
        <description>Most recent send&apos;s email name, populated by workflow</description>
        <label>Email Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emails_Delivered__c</fullName>
        <label>Emails Delivered</label>
        <summarizedField>Email_Summary_Statistic__c.Emails_Delivered__c</summarizedField>
        <summaryFilterItems>
            <field>Email_Summary_Statistic__c.Test_Send__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Email_Summary_Statistic__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <inlineHelpText>Times must be in format h:mm AM/PM</inlineHelpText>
        <label>End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntName__c</fullName>
        <description>Decode of the EntName from Ent</description>
        <inlineHelpText>The related Entity</inlineHelpText>
        <label>Entity Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Specific_Level__c</fullName>
        <label>Entity Specific Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Events</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Event Form)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Link__c</fullName>
        <label>Event Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <inlineHelpText>This is the name that will display on the Event Details page</inlineHelpText>
        <label>Event Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Registration_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Event Registration Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Events_Category__c</fullName>
        <description>Category of Event</description>
        <label>Event Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activist Event</fullName>
                </value>
                <value>
                    <fullName>Club Support Event</fullName>
                </value>
                <value>
                    <fullName>Outing</fullName>
                </value>
                <value>
                    <fullName>Social Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>